# lazy_marshal

./: .gitignore  Cargo.toml  README.md
lazy_marshal/: Cargo.toml  log.txt
lazy_marshal/benches/: benches.rs
lazy_marshal/src/: error.rs  impls.rs  lib.rs  traits.rs  utils.rs
lazy_marshal/src/impls/: tests.rs
lazy_marshal_derive/: Cargo.toml
lazy_marshal_derive/src/: lib.rs
test-macro/: Cargo.toml
test-macro/src/: lib.rs
test-macro/tests/: derives.rs
