[package]
name = "lazy_marshal"
version = "0.1.1"
edition = "2021"

[dependencies]
paste = { version = "1.0", optional = true }
lazy_marshal_derive = { path = "../lazy_marshal_derive", optional = true }

[features]
default = ["tuples", "derive"]
tuples = ["paste"]
derive = ["lazy_marshal_derive"]

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false

[dev-dependencies]
criterion = { version = "0.*", features = ["html_reports"] }
